--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 239,
    "id": "f7d37ee0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 240,
    "id": "973d70fc",
    "metadata": {},
    "outputs": [
@@ -248,20 +248,21 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Read the data and print out some heading rows\n",
+    "#'utf-8' codec can't read the data so we change it to latin1\n",
     "data = pd.read_csv('Covid_stats.csv', encoding='latin1')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 241,
    "id": "fa7be252",
    "metadata": {},
    "outputs": [],
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 242,
    "id": "42e15631",
    "metadata": {},
    "outputs": [
@@ -485,7 +486,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 243,
    "id": "d99e7d95",
    "metadata": {},
    "outputs": [
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 244,
    "id": "3bcb7633",
    "metadata": {},
    "outputs": [],
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 245,
    "id": "d3fdd441",
    "metadata": {},
    "outputs": [],
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 246,
    "id": "a99a8f9f",
    "metadata": {},
    "outputs": [
@@ -799,7 +800,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 247,
    "id": "bc4fed7c",
    "metadata": {},
    "outputs": [
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 248,
    "id": "ecf5c174",
    "metadata": {},
    "outputs": [],
@@ -887,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 249,
    "id": "66afb817",
    "metadata": {},
    "outputs": [
@@ -933,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 250,
    "id": "7aea0ec5",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1321,7 @@
        "[231 rows x 21 columns]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,15 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c774694",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 251,
    "id": "4d88eb52",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1666,7 @@
        "[231 rows x 17 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1686,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 252,
    "id": "c7c608b2",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 253,
    "id": "45596f8d",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 254,
    "id": "89ad133e",
    "metadata": {},
    "outputs": [
@@ -2097,7 +2090,7 @@
        "[231 rows x 17 columns]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 255,
    "id": "9e89c4f0",
    "metadata": {},
    "outputs": [],
